syntax = "proto3";

option go_package = "github.com/canonical/ubuntu-pro-for-windows/agentapi";

package agentapi;

message Empty {}

service UI {
    rpc ApplyProToken (ProAttachInfo) returns (Empty) {}
    rpc Ping (Empty) returns (Empty) {}
}

message ProAttachInfo {
    string token = 1;
}

service WSLInstance {
    rpc Connected (stream DistroInfo) returns (stream Port) {}
}

message DistroInfo {
    string wsl_name = 1;
    string id = 2;
    string version_id = 3;
    string pretty_name = 4;
    bool pro_attached = 5;
    repeated string pro_services = 6;
}

message Port {
    uint32 port = 1;
}

